--- a/particlesjs-config.json
+++ b/particlesjs-config.json
@@ -1,23 +1,23 @@
 {
   "particles": {
     "number": {
-      "value": 104,
+      "value": 72,
       "density": {
         "enable": true,
-        "value_area": 473.51100518494565
+        "value_area": 4498.354549256984
       }
     },
     "color": {
-      "value": "#dcc6c6"
+      "value": "#de0fde"
     },
     "shape": {
-      "type": "circle",
+      "type": "polygon",
       "stroke": {
         "width": 0,
-        "color": "#000000"
+        "color": "#000"
       },
       "polygon": {
-        "nb_sides": 5
+        "nb_sides": 6
       },
       "image": {
         "src": "img/github.svg",
@@ -26,37 +26,37 @@
       }
     },
     "opacity": {
-      "value": 0.5,
+      "value": 0.23234759199762825,
       "random": true,
       "anim": {
         "enable": false,
-        "speed": 1,
-        "opacity_min": 0.1,
+        "speed": 0.48691418137553294,
+        "opacity_min": 0.048691418137553295,
         "sync": false
       }
     },
     "size": {
-      "value": 7.891850086415761,
+      "value": 112.16780303333778,
       "random": true,
       "anim": {
-        "enable": false,
-        "speed": 40,
-        "size_min": 0.1,
+        "enable": true,
+        "speed": 10,
+        "size_min": 40,
         "sync": false
       }
     },
     "line_linked": {
       "enable": false,
-      "distance": 500,
+      "distance": 200,
       "color": "#ffffff",
-      "opacity": 0.4,
+      "opacity": 1,
       "width": 2
     },
     "move": {
       "enable": true,
-      "speed": 6,
-      "direction": "bottom",
-      "random": false,
+      "speed": 8.011985930952699,
+      "direction": "none",
+      "random": true,
       "straight": false,
       "out_mode": "out",
       "bounce": false,
@@ -71,12 +71,12 @@
     "detect_on": "canvas",
     "events": {
       "onhover": {
-        "enable": true,
-        "mode": "bubble"
+        "enable": false,
+        "mode": "grab"
       },
       "onclick": {
-        "enable": true,
-        "mode": "repulse"
+        "enable": false,
+        "mode": "push"
       },
       "resize": true
     },
@@ -84,14 +84,14 @@
       "grab": {
         "distance": 400,
         "line_linked": {
-          "opacity": 0.5
+          "opacity": 1
         }
       },
       "bubble": {
-        "distance": 400,
-        "size": 4,
-        "duration": 0.3,
-        "opacity": 1,
+        "distance": 353.01278149726136,
+        "size": 40.57618178129441,
+        "duration": 2,
+        "opacity": 8,
         "speed": 3
       },
       "repulse": {
